--- a/frontend/app/_components/LogIn/index.module.css
+++ b/frontend/app/_components/LogIn/index.module.css
@@ -9,6 +9,10 @@
 
 }
 
+.startBrowsing {
+  color: var(--fontColor)
+}
+
 .loginItemList {
   list-style-type: none;
   padding: 1em;
